--- a/src/PackageArchive/Scenario.WebApp/Scenario.WebApp.csproj
+++ b/src/PackageArchive/Scenario.WebApp/Scenario.WebApp.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="$(MicrosoftNETCoreAppPackageVersion)" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="$(MicrosoftNETCoreAppPackageVersion)" />
+    <!-- Hardcode these to the latest public versions -->
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.30" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.30" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="$(MicrosoftAspNetCoreRazorDesignPackageVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="$(MicrosoftAspNetCoreAuthenticationAzureADUIPackageVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="$(MicrosoftAspNetCoreAuthenticationAzureADB2CUIPackageVersion)" />
