--- a/eng/Workarounds.props
+++ b/eng/Workarounds.props
@@ -42,4 +42,10 @@
     <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
 
+  <!-- TrimAnaylzer currently breaks when run on aspnetcore. Remove when trimming analyzers are fixed
+       https://github.com/dotnet/aspnetcore/issues/41016 -->
+  <PropertyGroup>
+    <EnableTrimAnalyzer Condition=" '$(EnableTrimAnalyzer)' == ''">false</EnableTrimAnalyzer>
+  </PropertyGroup>
+
 </Project>
