Caching common HttpResults types (#40965)
* Caching known results

* removing generated code

* Updating files

* Updating csproj

* Updating autogenerated code

* Removing non-lazy cache

* formatting fix

* small perf condition

* small perf

* Fixing formatting

* Range adjustment

* removing template debug flag

* Removing HTTP 100

* Adding unit test for t4 template

* Fixing ubuntu test

* Update src/Http/README.md

Co-authored-by: Günther Foidl <gue@korporal.at>

* Update src/Http/Http.Results/test/ResultsCacheTests.cs

Co-authored-by: Brennan <brecon@microsoft.com>

* PR Feedback

Co-authored-by: Günther Foidl <gue@korporal.at>
Co-authored-by: Brennan <brecon@microsoft.com>

--- a/src/Http/Http.Results/src/Microsoft.AspNetCore.Http.Results.csproj
+++ b/src/Http/Http.Results/src/Microsoft.AspNetCore.Http.Results.csproj
@@ -28,4 +28,16 @@
     <InternalsVisibleTo Include="Microsoft.AspNetCore.Http.Results.Tests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- This is the T4 template service and is added by VS anytime you modify a T4 template. Required for .tt files. -->
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ResultsCache.StatusCodes.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ResultsCache.StatusCodes.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
 </Project>
