--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -7,6 +7,13 @@
 -->
 <Project>
   <ItemGroup>
+    <TrimmableProject Include="Microsoft.AspNetCore.DataProtection.Abstractions" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Cryptography.Internal" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" />
+    <TrimmableProject Include="Microsoft.AspNetCore.DataProtection" />
+    <TrimmableProject Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" />
+    <TrimmableProject Include="Microsoft.AspNetCore.DataProtection.Extensions" />
+    <TrimmableProject Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" />
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting.Abstractions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting" />
     <TrimmableProject Include="Microsoft.AspNetCore.Hosting.Server.Abstractions" />
