Fix Component Governance bugs

--- a/src/Components/Web.JS/package.json
+++ b/src/Components/Web.JS/package.json
@@ -36,6 +36,7 @@
     "bl": ">=2.2.1",
     "lodash": ">=4.17.21",
     "tar": ">=4.4.18",
-    "url-parse": ">=1.5.8"
+    "url-parse": ">=1.5.8",
+    "minimist": ">=1.2.6"
   }
 }
