--- a/src/Middleware/NodeServices/src/package.json
+++ b/src/Middleware/NodeServices/src/package.json
@@ -16,5 +16,8 @@
     "typescript": "^3.0.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0"
+  },
+  "resolutions": {
+    "minimist": ">=1.2.6"
   }
 }
