--- a/src/Components/WebAssembly/WebAssembly.Authentication/src/Interop/package.json
+++ b/src/Components/WebAssembly/WebAssembly.Authentication/src/Interop/package.json
@@ -16,6 +16,7 @@
     "oidc-client": "^1.10.1"
   },
   "resolutions": {
-    "tar": ">=4.4.18"
+    "tar": ">=4.4.18",
+    "minimist": ">=1.2.6"
   }
 }
