--- a/src/Components/Web.JS/package.json
+++ b/src/Components/Web.JS/package.json
@@ -37,6 +37,7 @@
     "lodash": ">=4.17.21",
     "tar": ">=4.4.18",
     "url-parse": ">=1.5.8",
-    "minimist": ">=1.2.6"
+    "minimist": ">=1.2.6",
+    "ansi-regex": ">=4.1.1"
   }
 }
