--- a/src/Middleware/SpaServices/src/npm/aspnet-webpack/package.json
+++ b/src/Middleware/SpaServices/src/npm/aspnet-webpack/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-middleware": "^1.8.4 || ^3.0.0"
   },
   "resolutions": {
-    "minimist": ">=1.2.6"
+    "minimist": ">=1.2.6",
+    "ansi-regex": ">=4.1.1"
   }
 }
