--- a/src/Middleware/NodeServices/src/package.json
+++ b/src/Middleware/NodeServices/src/package.json
@@ -15,7 +15,8 @@
     "ts-loader": "^4.5.0",
     "typescript": "^3.0.1",
     "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "yarn-audit-fix": "^9.2.2"
   },
   "resolutions": {
     "minimist": ">=1.2.6",
