--- a/src/Middleware/SpaServices/src/npm/aspnet-webpack/package.json
+++ b/src/Middleware/SpaServices/src/npm/aspnet-webpack/package.json
@@ -29,7 +29,8 @@
     "@types/webpack": "^4.1.3",
     "rimraf": "^2.5.4",
     "typescript": "^2.0.0",
-    "webpack": "^4.5.0"
+    "webpack": "^4.5.0",
+    "yarn-audit-fix": "^9.2.2"
   },
   "peerDependencies": {
     "webpack": "^1.13.2 || ^2.1.0-beta || ^3.0.0 || ^4.0.0",
