--- a/src/SignalR/clients/ts/signalr-protocol-msgpack/package.json
+++ b/src/SignalR/clients/ts/signalr-protocol-msgpack/package.json
@@ -52,6 +52,7 @@
   },
   "resolutions": {
     "url-parse": ">=1.5.8",
-    "node-fetch": ">=2.6.7"
+    "node-fetch": ">=2.6.7",
+    "ws": ">=6.2.2"
   }
 }
