--- a/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
+++ b/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
@@ -14,5 +14,9 @@
   },
   "dependencies": {
     "@azure/msal-browser": "2.8.0"
+  },
+  "resolutions": {
+    "ansi-regex": ">=4.1.1",
+    "minimist": ">=1.2.6"
   }
 }
