Clean up project file

--- a/src/Http/OpenApi/src/Microsoft.AspNetCore.OpenApi.csproj
+++ b/src/Http/OpenApi/src/Microsoft.AspNetCore.OpenApi.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>$(DefaultNetCoreTargetFramework)</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageTags>aspnetcore;openapi</PackageTags>
+    <Description>Provides APIs for annotating route handler endpoints in ASP.NET Core with OpenAPI annotations.</Description>
     <Nullable>enable</Nullable>
-    <Trimmable>true</Trimmable>
   </PropertyGroup>
 
   <ItemGroup>
