--- a/src/Http/OpenApi/src/Microsoft.AspNetCore.OpenApi.csproj
+++ b/src/Http/OpenApi/src/Microsoft.AspNetCore.OpenApi.csproj
@@ -22,4 +22,8 @@
     <Compile Include="$(SharedSourceRoot)TypeNameHelper\TypeNameHelper.cs" LinkBase="Shared" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Microsoft.AspNetCore.OpenApi.Tests" />
+  </ItemGroup>
+
 </Project>
