--- a/eng/helix/content/RunTests/RunTests.csproj
+++ b/eng/helix/content/RunTests/RunTests.csproj
@@ -11,4 +11,6 @@
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20158.1" />
     <PackageReference Condition=" '$(InstallPlaywright)' == 'true' " Include="Microsoft.Playwright" Version="1.17.3" />
   </ItemGroup>
+
+  <Target Name="Test" />
 </Project>
