--- a/eng/targets/Helix.targets
+++ b/eng/targets/Helix.targets
@@ -34,6 +34,7 @@
     <HelixContent Include="$(RepoRoot)src\Servers\IIS\tools\UpdateIISExpressCertificate.ps1" />
     <HelixContent Include="$(RepoRoot)src\Servers\IIS\tools\TestCert.pfx" />
     <HelixContent Include="$(RepoRoot)src\Servers\IIS\AspNetCoreModuleV2\AspNetCore\aspnetcore_schema_v2.xml" />
+    <HelixContent Include="$(NUGET_PACKAGES)\dotnet-trace\6.0.322201\dotnet-trace.6.0.322201.nupkg" />
 
     <HelixPreCommand Include="call RunPowershell.cmd update_schema.ps1 || exit /b 1" />
     <HelixPreCommand Include="call RunPowershell.cmd UpdateIISExpressCertificate.ps1 || exit /b 1" />
